[gd_scene load_steps=3 format=3 uid="uid://c8k3nan5p2qrs"]

[ext_resource type="Script" path="res://scripts/inventory_ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
text = "关闭"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="InventoryPanel" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/InventoryPanel"]
layout_mode = 2
text = "背包"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/InventoryPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryGrid" type="GridContainer" parent="Panel/HBoxContainer/InventoryPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="WarehousePanel" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/WarehousePanel"]
layout_mode = 2
text = "仓库"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/WarehousePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="WarehouseGrid" type="GridContainer" parent="Panel/HBoxContainer/WarehousePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 6

[node name="ItemInfoPanel" type="VBoxContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/ItemInfoPanel"]
layout_mode = 2
text = "物品信息"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/ItemInfoPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ItemName" type="Label" parent="Panel/HBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
text = "选择物品查看详情"
horizontal_alignment = 1

[node name="ItemIcon" type="TextureRect" parent="Panel/HBoxContainer/ItemInfoPanel/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemDescription" type="Label" parent="Panel/HBoxContainer/ItemInfoPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = ""
autowrap_mode = 3

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
